Atualização do projeto 04

--- a/atividades/fcc/projetos/moka/04-build-a-product-landing-page-project/index.html
+++ b/atividades/fcc/projetos/moka/04-build-a-product-landing-page-project/index.html
@@ -38,15 +38,14 @@
       <section id="dolor">
         <h3>Dolor</h3>
         <div class="prices">
-          
-          <div class="price-tag">
+          <div class="price-tag column-01">
             <table>
               <thead>
                 <tr>
                   <th colspan="2">Plano 01</th>
                 </tr>
                 <tr>
-                  <th colspan="2">Uso eventual: $50</th>
+                  <th colspan="2">Eventual: $50</th>
                 </tr>
               </thead>
               <tbody>
@@ -64,14 +63,72 @@
                 </tr>
               </tbody>
             </table>
-            <button class="button-style price-tag-button"><span style="font-size: 100px;">&#128559; </span></button>
+            <button class="button-style price-tag-button price-tag-button-text-01"><span>&#128559;</span></button>
           </div>
-
+          <div class="price-tag column-02">
+            <table>
+              <thead>
+                <tr>
+                  <th colspan="2">Plano 02</th>
+                </tr>
+                <tr>
+                  <th colspan="2">Sério: $250</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>02</td>
+                  <td>Página(s)</td>                  
+                </tr>
+                <tr>
+                  <td>04</td>
+                  <td>Parágrafo(s)</td>
+                </tr>
+                <tr>
+                  <td>500</td>
+                  <td>Palavras</td>
+                </tr>
+              </tbody>
+            </table>
+            <button class="button-style price-tag-button price-tag-button-text-02"><span>&#128557;</span></button>
+          </div>
+          <div class="price-tag column-03">
+            <table>
+              <thead>
+                <tr>
+                  <th colspan="2">Plano 03</th>
+                </tr>
+                <tr>
+                  <th colspan="2">Profissional: $1000</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>04</td>
+                  <td>Página(s)</td>                  
+                </tr>
+                <tr>
+                  <td>08</td>
+                  <td>Parágrafo(s)</td>
+                </tr>
+                <tr>
+                  <td>1000</td>
+                  <td>Palavras</td>
+                </tr>
+              </tbody>
+            </table>
+            <button class="button-style price-tag-button price-tag-button-text-03"><span>&#129324;</span></button>
+          </div>          
         </div>
       </section>
     </main>
-    <footer class="sansita-bold">
-      FOOTER
+    <footer>
+      <span>
+        <a href="theloremipsumfoundation.io/privacidade">Privacidade</a>
+        <a href="theloremipsumfoundation.io/termos">Termos</a>
+        <a href="falacomnois@theloremipsumfoundation.io">Contato</a>
+      </span>
+      <span>Copyleft <span style="transform: scaleX(-1)">&#169;</span> The Lorem Ipsum Foundation</span>
     </footer>
   </body>
 </html>
