Criação do branch para a versão 1.0

--- a/atividades/fcc/exercicios/02-JavaScript-Algorithms-and-Data-Structures-(Beta)/03-learn-basic-javascript-by-building-a-role-playing-game/index.html
+++ b/atividades/fcc/exercicios/02-JavaScript-Algorithms-and-Data-Structures-(Beta)/03-learn-basic-javascript-by-building-a-role-playing-game/index.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./styles.css">
-    <title>RPG - Dragon Repeller</title>
+    <title>RPG - Dragon Repeller</title> 
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Jaini+Purva&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Yatra+One&display=swap');
+</style>
   </head>
   <body>
+    <h1 class="jaini-purva-regular">Dragon Repeller</h1>
+    <h2 class="yatra-one-regular">A game of father and son</h2>
     <div id="game">
       <div id="stats">
         <span class="stat">XP: <strong><span id="xpText">0</span></strong></span>
