Adição dos códigos referentes aos 'balões de fala'

--- a/atividades/fcc/exercicios/02-JavaScript-Algorithms-and-Data-Structures-(Beta)/03-learn-basic-javascript-by-building-a-role-playing-game/index.html
+++ b/atividades/fcc/exercicios/02-JavaScript-Algorithms-and-Data-Structures-(Beta)/03-learn-basic-javascript-by-building-a-role-playing-game/index.html
@@ -30,6 +30,12 @@
       <div id="text">
         Welcome to Dragon Repeller. You must defeat the dragon that is preventing people from leaving the town. You are in the town square. Where do you want to go? Use the buttons above.
       </div>
+      <div>
+        <div class="box3 sb14"> esquerda </div>
+      </div>
+      <div>
+        <div class="box3 sb13"> direita </div>
+      </div>
     </div>
     <script src="./script.js"></script>
   </body>
