Reformulação de vários pontos do código
1. Modifica algumas cores originais para uma paleta mais "sóbria", com base na
cor "Deep Mocha": https://coolors.co/44362f
2. Remove o JavaScript que gerava uma tabela com o restante do dinheiro da
caixa registradora, em favor da nova versão em SVG
3. Altera o id da caixa registradora de "drawer-display" para "drawer"

--- a/atividades/fcc/projetos/moka/09-build-a-cash-register-project/index.html
+++ b/atividades/fcc/projetos/moka/09-build-a-cash-register-project/index.html
@@ -142,7 +142,7 @@
           <line x1="90.40" y1="139.675" x2="109.85" y2="149.115" stroke-linecap="round" />
         </svg>
       </div>
-      <div id="treco-azul" class="svg-container">
+      <div id="lateral-direita-da-gaveta" class="svg-container">
         <svg class="svg-element">
           <polygon points="180,225 180,175 395,90 395,140" fill="grey" />
         </svg>
