Altera o HTML para viabilizar os testes

--- a/atividades/fcc/projetos/moka/09-build-a-cash-register-project/index.html
+++ b/atividades/fcc/projetos/moka/09-build-a-cash-register-project/index.html
@@ -94,7 +94,7 @@
       <button id="purchase-btn">BOTÃO</button>
     </section>
     <section id="drawer-section">
-      <div id="change-bubble01" class="base-speech-bubble change-bubble pop-up">$ 100.00</div>
+      <!--div id="change-bubble01" class="base-speech-bubble change-bubble pop-up">$ 100.00</div>
       <div id="change-bubble02" class="base-speech-bubble change-bubble pop-up">$ 10.00</div>
       <div id="change-bubble03" class="base-speech-bubble change-bubble pop-up">$ 20.50</div>
       <div id="change-bubble04" class="base-speech-bubble change-bubble pop-up">$ 12.24</div>
@@ -102,9 +102,9 @@
       <div id="change-bubble06" class="base-speech-bubble change-bubble pop-up">$ 94.21</div>
       <div id="change-bubble07" class="base-speech-bubble change-bubble pop-up">$ 41.96</div>
       <div id="change-bubble08" class="base-speech-bubble change-bubble pop-up">$ 125.60</div>
-      <div id="change-bubble09" class="base-speech-bubble change-bubble pop-up">$ 0.28</div>
-      <div id="drawer" class="svg-container">
-        <svg class="svg-element">
+      <div id="change-bubble09" class="base-speech-bubble change-bubble pop-up">$ 0.28</div-->
+      <div id="drawer" class="svg-container" style="font-size: 1.5rem;">
+        <!--svg class="svg-element">
           <polygon points="220,55 220,5 395,90 395,140" fill="silver" />
           <polygon points="5,140 5,90 220,5 220,55" fill="silver" />
           <polygon points="5,102.5 220,17.5 395,102.5 180,187.5" fill="white" />
@@ -140,13 +140,13 @@
           <line x1="62.38" y1="134.395" x2="81.83" y2="143.835" stroke-linecap="round" />
           <line x1="62.38" y1="134.395" x2="53.80" y2="138.565" stroke-linecap="round" />
           <line x1="90.40" y1="139.675" x2="109.85" y2="149.115" stroke-linecap="round" />
-        </svg>
+        </svg-->
       </div>
-      <div id="lateral-direita-da-gaveta" class="svg-container">
+      <!--div id="lateral-direita-da-gaveta" class="svg-container">
         <svg class="svg-element">
           <polygon points="180,225 180,175 395,90 395,140" fill="grey" />
         </svg>
-      </div>
+      </div-->
     </section>
   </main>
   <script src="script.js"></script>
